# Protocol-Buffers-Handbook

./: README.md
chapter1/: contact.proto  person.proto
chapter10/bazel/: BUILD.bazel  MODULE.bazel  go.mod  main.go
chapter10/bazel/proto/: BUILD.bazel  test.proto
chapter10/bazel/proto/v1/: BUILD.bazel  test.proto
chapter10/buf/: buf.gen.yaml  go.mod  main.go
chapter10/buf/proto/: buf.yaml  test.proto
chapter10/buf/proto/v1/: test.proto
chapter10/makefile/: Makefile  go.mod  main.go
chapter10/makefile/proto/: test.proto
chapter10/makefile/proto/v1/: test.proto
chapter2/: account.proto  address.proto  book.proto  cat_dog.proto  phone.proto2.proto  phone.proto3.proto  reserved.proto  run.proto
chapter3/: enums.proto  enums_identifier.txtpb  enums_int.txtpb  maps.proto  maps.txtpb  messages.proto  messages.txtpb  oneofs.proto  oneofs.txtpb  oneofs_wrong.txtpb  payment.json  payment.proto  payment.txtpb  payment_negative_uint.txtpb  payment_unknown_field.txtpb  payment_wrong_type.txtpb  scalar_values.proto  scalar_values.txtpb
chapter4/: a.proto  wkt.proto
chapter4/challenge/: challenge.proto  go.mod  go.sum  main.go
chapter4/challenge/solutions/: name.desc  name.proto  name_with_imports.desc  name_with_options.desc  name_with_sci.desc
chapter4/decode_raw/: an_app.preferences_pb
chapter4/encode_decode/: user.proto  user.txtpb
chapter4/proto/b/: b.proto
chapter5/fixed/: encoding.proto  fixed32.txtpb
chapter5/length_delimited/: embedded.txtpb  encoding.proto  long_string.txtpb  string.txtpb
chapter5/map/: encoding.desc  encoding.proto  map.txtpb
chapter5/metadata/: encoding.proto  tag_size.proto  varint.txtpb
chapter5/repeated/: encoding.proto  packed.txtpb  unpacked.txtpb
chapter5/varint/: encoding.proto  int32.txtpb  int64.txtpb  negative_int32.txtpb  negative_int64.txtpb
chapter5/zigzag/: main.go
chapter6/: go.mod  main.go
chapter6/proto/: id.pb.go
chapter6/proto/v1/: id.proto
chapter6/proto/v2/: id.proto  id_overflow.txtpb
chapter6/proto/v3/: id.proto  id.txtpb
chapter7/: .gitignore  go.mod  go.sum  main.go
chapter7/cmd/addressbook/: add.go  list.go
chapter7/pkg/addressbook/: add.go  addressbook.go  list.go
chapter7/proto/: addressbook.proto
chapter8/: .gitignore  README.md  main.py
chapter8/proto/: addressbook.proto
chapter9/: .gitignore  go.mod  main.go
chapter9/cmd/addressbook/: add.go  addressbook.go  list.go
chapter9/cmd/protoc-gen-check/: main.go
chapter9/pkg/addressbook/: add.go  addressbook.go  addressbook_test.go  list.go
chapter9/pkg/protoc-gen-check/: descriptor.go  message.go
chapter9/proto/: addressbook.proto
chapter9/proto/validate/: custom_options.pb.go  custom_options.proto
