module(
    name = "com_github_packtpublishing_protocol_buffers_handbook_chapter10_bazel",
    version = "1.0",
)

bazel_dep(name = "gazelle", version = "0.36.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_google_protobuf"
)

bazel_dep(name = "rules_go", version = "0.46.0")
