load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
)

go_proto_library(
    name = "test_go_proto",
    importpath = "github.com/PacktPublishing/Protocol-Buffers-Handbook/chapter10/bazel/proto",
    proto = ":test_proto",
)

go_library(
    name = "test",
    embed = [":test_go_proto"],
    importpath = "github.com/PacktPublishing/Protocol-Buffers-Handbook/chapter10/bazel/proto",
    visibility = ["//visibility:public"],
)
